[package]
name = "ghost-cell"
version = "0.2.1"
authors = ["Matthieu M. <matthieum.147192@gmail.com>"]
edition = "2018"
description = "Compile-time zero-cost borrow-checking of aliased references"
repository = "https://github.com/matthieu-m/ghost-cell"
license = "MIT OR Apache-2.0"
keywords = ["experimental", "aliasing", "borrowing"]
categories = ["memory-management", "no-std"]

[features]
# Enables the use of unproven GhostCursor.
experimental-ghost-cursor = []
