[package]
name = "ghost-cell"
version = "0.2.3"
authors = ["Matthieu M. <matthieum.147192@gmail.com>"]
edition = "2021"
description = "Compile-time zero-cost borrow-checking of aliased references"
repository = "https://github.com/matthieu-m/ghost-cell"
license = "MIT OR Apache-2.0"
keywords = ["experimental", "aliasing", "borrowing"]
categories = ["memory-management", "no-std"]

[features]
# Enables the use of the unproven GhostCursor.
experimental-ghost-cursor = []
# Enables the use of unproven multiple mutable borrows.
experimental-multiple-mutable-borrows = []
